--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "4a52fe62-514f-494c-a593-1e2c229fe2cb"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
